--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,10 @@ li {
         margin: auto;
     }
 
+    .main-header {
+        padding-bottom: 2em;
+    }
+
     .col {
         float: left;
         max-width: 48%;
@@ -223,6 +227,7 @@ li {
 
     .portfolio {
         margin: auto;
+        
     }
 
     .image {
@@ -268,8 +273,13 @@ li {
 @media (min-width: 1024px) {
     .name {
         margin: 0;
-        font-size: 1.5em; 
+        font-size: 2em; 
         float: left;
+    }
+
+    .avatar {
+        width: 40%;
+
     }
 
     .main-nav {
@@ -279,7 +289,7 @@ li {
         text-transform: uppercase;
         font-weight: bold;
         padding-right: 0;
-
+        padding-top: .8em;
       
     }
 
@@ -288,7 +298,7 @@ li {
     }
 
     .main-nav a {
-        font-size: .75em;
+        font-size: 1em;
         padding-left: 1em;
         float: left;
         width: auto;
